; ModuleID = '/home/carl/AnghaBench/linux/samples/v4l/extr_v4l2-pci-skeleton.c_skeleton_dv_timings_cap.c'
source_filename = "/home/carl/AnghaBench/linux/samples/v4l/extr_v4l2-pci-skeleton.c_skeleton_dv_timings_cap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.v4l2_dv_timings_cap = type { i32 }
%struct.file = type { i32 }
%struct.skeleton = type { i64 }

@ENODATA = common dso_local global i32 0, align 4
@skel_timings_cap = common dso_local global %struct.v4l2_dv_timings_cap zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, i8*, %struct.v4l2_dv_timings_cap*)* @skeleton_dv_timings_cap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @skeleton_dv_timings_cap(%struct.file* %0, i8* %1, %struct.v4l2_dv_timings_cap* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.file*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.v4l2_dv_timings_cap*, align 8
  %8 = alloca %struct.skeleton*, align 8
  store %struct.file* %0, %struct.file** %5, align 8
  store i8* %1, i8** %6, align 8
  store %struct.v4l2_dv_timings_cap* %2, %struct.v4l2_dv_timings_cap** %7, align 8
  %9 = load %struct.file*, %struct.file** %5, align 8
  %10 = call %struct.skeleton* @video_drvdata(%struct.file* %9)
  store %struct.skeleton* %10, %struct.skeleton** %8, align 8
  %11 = load %struct.skeleton*, %struct.skeleton** %8, align 8
  %12 = getelementptr inbounds %struct.skeleton, %struct.skeleton* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp eq i64 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %3
  %16 = load i32, i32* @ENODATA, align 4
  %17 = sub nsw i32 0, %16
  store i32 %17, i32* %4, align 4
  br label %21

18:                                               ; preds = %3
  %19 = load %struct.v4l2_dv_timings_cap*, %struct.v4l2_dv_timings_cap** %7, align 8
  %20 = bitcast %struct.v4l2_dv_timings_cap* %19 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %20, i8* align 4 bitcast (%struct.v4l2_dv_timings_cap* @skel_timings_cap to i8*), i64 4, i1 false)
  store i32 0, i32* %4, align 4
  br label %21

21:                                               ; preds = %18, %15
  %22 = load i32, i32* %4, align 4
  ret i32 %22
}

declare dso_local %struct.skeleton* @video_drvdata(%struct.file*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
